--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,7 @@ xcuserdata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+.DS_Store
 ### XcodeInjection ###
 # Code Injection
 # After new code Injection tools there's a generated folder /iOSInjectionProject
